standard --fix and customized scrollbar

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -174,3 +174,18 @@ span {
   padding-bottom: 3px;
   margin: auto 0;
 }
+
+::-webkit-scrollbar {
+  background-color: var(--background-color-main);
+  width: 0.75rem;
+}
+
+::-webkit-scrollbar-thumb {
+  /* background: linear-gradient(180deg, rgb(208, 54, 138) 0%, rgb(112, 138, 212) 100%); */
+  background: linear-gradient(180deg, rgba(146, 106, 166, 0.8) 0%, rgba(102, 103, 171, 0.8) 100%);
+}
+
+::-webkit-scrollbar-track {
+  background-color: var(--background-color-main);
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+}
